syntax = "proto3";

package filestorage;

message FileUploadRequest {
  bytes file_content = 1;
  optional string file_name = 2;
}

message FileUploadResponse {
  string file_name = 1;
  uint32 size = 2;
}

service FileUploadService {
  rpc Upload(stream FileUploadRequest) returns (FileUploadResponse);
}